# FaceScaner_repo

./: .gitignore  FlaskServer.py  FlaskServerEmulator (1).py  PI ip.txt  api.py  blink.py  client.py  config.json  controler.py  controler_legacy.py  controller.py  controller.py.save  controller_v2.py  devices.py  dzedziczenie_proba.py  fastapi_test.py  flash_try.py  inzynierka.py  main_server.py  move_lifter  my_pixtend.py  pato_flask.py  plc_test.py  pythonRestClientEmulator.py  sequence_v1.py  simple_api.py  simple_webserver.py  status_lifer  stolik.py  try.py
.Trash-1000/files/: FlaskServerEmulator.py  api.py
.Trash-1000/info/: FlaskServerEmulator (1).py.trashinfo  FlaskServerEmulator.py.trashinfo  api.py.trashinfo  controller_v2.py.trashinfo  xDDDDDDDDDD.trashinfo
PythonModule/: CMakeCache.txt  CMakeLists.txt  fotosfera.cpp  fotosfera_test.py
dbus_test/: emitter.py  example-client.py  example-service.py  reciver.py
http_server/: server.py  test.html  try.html
